# robots

./: CMakeLists.txt  README.md  package.xml
config/: urdf.rviz
config/basic_arm/: joint_controllers.yaml
launch/: auv_d_gazebo.launch  basic_arm-keyboard_op.launch  basic_arm.launch  claw.launch  display-rviz.launch  gazebo.launch  tri_wheeler.launch
meshes/basic_arm/: arm_0.STL  arm_1.STL  base_link.STL  gripper_base.STL  gripper_hand_fix.STL  gripper_hand_move.STL  pin.STL
meshes/claw/: base_link.STL  finger_a.STL  finger_a_support.STL  finger_b.STL  finger_b_support.STL  finger_c.STL  finger_c_support.STL  moving_base.STL  rod.STL
meshes/prismatic_revolute_test/: base_link.STL  linear.STL  rotation.STL
meshes/tri_wheeler/: base_link.STL  front_wheel.STL  rear_wheel_L.STL  rear_wheel_R.STL
src/auv_d/: auv_d_key_control.cpp
src/basic_arm/: keyboard_control.cpp
sw_files/basic_arm/: Assem.SLDASM  arm_0.SLDPRT  arm_1.SLDPRT  base.SLDPRT  gripper-base.SLDPRT  gripper-hand.SLDPRT  joint_01.SLDPRT
sw_files/claw/: Assem_another.SLDASM  Base.SLDPRT  Part-1.SLDPRT  Part-2.SLDPRT  Part-3.SLDPRT  Part-5.SLDPRT  credits.md
sw_files/prismatic_revolute_test/: Assem2.SLDASM  base.SLDPRT  linear.SLDPRT  rotation.SLDPRT
sw_files/tri_wheeler/: chassis.SLDPRT  final-assembly.SLDASM  front-wheel.SLDPRT  rear-wheel.SLDPRT
urdf/: auv_d.xacro  basic_arm.xacro  claw.xacro  prismatic_revolute_test.xacro  tri_wheeler.xacro
worlds/: gravity_less.world  my_world.world
